// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNavigationStack should render correctly 1`] = `
<div
  className="bpk-navigation-stack"
>
  <div
    className="bpk-navigation-stack__view-track"
    style={
      Object {
        "transform": "translateX(0%)",
      }
    }
  >
    <div
      aria-hidden={false}
      autoFocus={false}
      className="bpk-navigation-stack__view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`BpkNavigationStack should set "aria-hidden" to true on non active views 1`] = `
<div
  className="bpk-navigation-stack"
>
  <div
    className="bpk-navigation-stack__view-track"
    style={
      Object {
        "transform": "translateX(-200%)",
      }
    }
  >
    <div
      aria-hidden={true}
      autoFocus={false}
      className="bpk-navigation-stack__view"
    >
      <div />
    </div>
    <div
      aria-hidden={true}
      autoFocus={false}
      className="bpk-navigation-stack__view"
    >
      <div />
    </div>
    <div
      aria-hidden={false}
      autoFocus={false}
      className="bpk-navigation-stack__view"
    >
      <div />
    </div>
  </div>
</div>
`;
